--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="speed">Speed: <span id="speed">0</span> km/h</div>
       <div class="coins">Coins: <span id="coins">0</span></div>
     </div>
-    <div class="car" id="car"></div>
-    <div class="obstacle" id="obstacle"></div>
-    <div class="coin" id="coin"></div>
+    <div class="car" id="car" style="background-image: url('https://github.com/Amrit-Raj01/gamexcar/blob/main/car.png?raw=true');"></div>
+    <div class="demon" id="demon" style="background-image: url('https://github.com/Amrit-Raj01/gamexcar/blob/main/obstacle.png?raw=true');"></div>
+    <div class="coin" id="coin" style="background-image: url('https://github.com/Amrit-Raj01/gamexcar/blob/main/coin.png?raw=true');"></div>
   </div>
   <script src="script.js"></script>
 </body>
